--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         package="com.infix.lms">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
     <application
             android:label="MHP"
             tools:replace="android:label"
