--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   permission_handler: ^11.3.1
   flutter_svg: ^2.0.7
   http: ^1.1.0
-  get: ^4.6.5
+  get: ^4.6.6
   get_storage: ^2.1.1
   flutter_rating_bar: ^4.0.1
   shared_preferences: ^2.2.0
@@ -26,6 +26,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   flutter_widget_from_html_core: ^0.15.1
   firebase_core_platform_interface: ^5.1.0
+  persistent_bottom_nav_bar: ^5.0.2
   loading_skeleton_niu: ^0.0.1
   http_auth: ^1.0.3
   firebase_core: ^3.1.0
@@ -84,9 +85,6 @@ dependencies:
 #    path: package_info_plus_windows-2.1.0
 #  package_info_plus: ^1.4.3+1
 #win32: ^5.0.6
-  persistent_bottom_nav_bar:
-      git:
-        url: https://github.com/HamzaSamirAmmar/PersistentBottomNavBar.git
 
 dependency_overrides:
   http: ^0.13.1
