--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,9 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   flutter_widget_from_html_core: ^0.15.1
   firebase_core_platform_interface: ^5.1.0
-  persistent_bottom_nav_bar: ^5.0.2
+  persistent_bottom_nav_bar:
+    git:
+      url: https://github.com/HamzaSamirAmmar/PersistentBottomNavBar.git
   loading_skeleton_niu: ^0.0.1
   http_auth: ^1.0.3
   firebase_core: ^3.1.0
