--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,14 +26,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   flutter_widget_from_html_core: ^0.15.1
   firebase_core_platform_interface: ^5.1.0
-  persistent_bottom_nav_bar:
-    git:
-      url: https://github.com/HamzaSamirAmmar/PersistentBottomNavBar.git
-
-  showcaseview:
-    git:
-      url: https://github.com/chandrabezzo/flutter_showcaseview
-      ref: ae8d8a327cdede529d264d1df02892fdc6161688
+  persistent_bottom_nav_bar: ^5.0.2
   loading_skeleton_niu: ^0.0.1
   http_auth: ^1.0.3
   firebase_core: ^3.1.0
