--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
     <application
-            android:label="MHP"
+            android:label="Impulse"
             tools:replace="android:label"
             android:icon="@mipmap/launcher_icon"
             android:usesCleartextTraffic="true">
