--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: lms_flutter_app
 description: A new Flutter project.
 publish_to: 'none'
 
-version: 1.7.6+52
+version: 1.0.1
 
 environment:
   sdk: ">=3.0.0 <5.0.0"
@@ -21,7 +21,7 @@ dependencies:
   get_storage: ^2.1.1
   flutter_rating_bar: ^4.0.1
   shared_preferences: ^2.2.0
-  flutter_webview_plugin: ^0.4.0
+  # flutter_webview_plugin: ^0.4.0
   extended_nested_scroll_view: ^6.1.2
   font_awesome_flutter: ^10.5.0
   flutter_widget_from_html_core: ^0.15.1
@@ -54,7 +54,7 @@ dependencies:
 #      url: https://github.com/VictorUvarov/flutter_inappwebview
 #      ref: ios-16-compile-issue
   vdocipher_flutter: ^2.3.2
-  flutter_paystack: ^1.0.7
+  # flutter_paystack: ^1.0.7
 #  flutter_paystack:
 #    git:
 #      url: https://github.com/definitelyme/flutter_paystack.git
@@ -79,10 +79,11 @@ dependencies:
   awesome_notifications: ^0.9.3+1
   flutter_windowmanager: ^0.2.0
   video_player: ^2.9.0
-  chewie: ^1.8.1
-  flick_video_player: ^0.8.0
+  chewie: ^1.8.5
+  flick_video_player: ^0.9.0
   device_info_plus: 
   flutter_native_splash: 
+  flutter_paystack: ^1.0.7
 #  package_info_plus_windows:
 #    path: package_info_plus_windows-2.1.0
 #  package_info_plus: ^1.4.3+1
@@ -109,12 +110,14 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/logo.jpg"
+  image_path: "images/logox.png"
 
 flutter_native_splash:
-  background_image: "images/Splash.png"
+  color: "#FFFFFF" # Replace with your desired background color (e.g., white)
+  background_image: "images/logo_animy.gif"
   fullscreen: false
-
+  android: true
+  ios: true
 flutter:
   uses-material-design: true
   assets:
