--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,10 +60,10 @@ android {
         applicationId "com.ssc.course"
         minSdkVersion 23
         targetSdkVersion 34
-//        versionCode flutterVersionCode.toInteger()
-//        versionName flutterVersionName
-        versionCode 52
-        versionName "1.7.6"
+        versionCode flutterVersionCode.toInteger()
+        versionName flutterVersionName
+        // versionCode 53
+        // versionName "1.0.53"
         multiDexEnabled true
     }
 
